Update 1. Linux : Revision.md

--- a/1. Linux : Revision.md
+++ b/1. Linux : Revision.md
@@ -8,6 +8,11 @@ nano demo-file.txt,
 sudo apt-get update, sudo apt-get upgrade, sudo apt-get install nginx,
 systemctl status nginx, sudo systemctl stop nginx, sudo systemctl start nginx,
 
+ 
+# Working with different users : 
+sudo useradd -m Jethalal, sudo passwd jethalal (set the password), su jethalal,
+sudo useradd -m tappu -s /bin/bash, sudo passwd tappu, su tappu
+
 # creating a html file that should be available in http : 
 cd /var, cd www, sudo vim index.html (insert the html code, then copy the 
 public ip address from the details of instance, then use "http://ipaddress:80" and
