Update 1. Linux : Revision.md

--- a/1. Linux : Revision.md
+++ b/1. Linux : Revision.md
@@ -22,14 +22,14 @@ your website is ready to be view on any device.)
 
 Rivision of Linux Basics : Day 1/2 : TrainWithShubham
 
-Great! You’ve shared a solid list of commands, and I’ll now create an interactive, story-like sequence that incorporates all of them. This will help you practice file operations, package management, and even hosting a simple HTML file using Nginx. Let’s dive into the story!
+Absolutely! Let’s expand the story to include user management tasks. We’ll add steps to create users, set passwords, switch between users, and verify their configurations. This will make the story more comprehensive and help you practice user-related commands.
 
 ---
 
-### **Linux Command Practice Story: Setting Up a Web Server**
+### **Updated Linux Command Practice Story: Setting Up a Web Server and Managing Users**
 
 #### **Scenario:**
-You are a DevOps engineer tasked with setting up a web server on a Linux machine. You need to organize files, install and configure Nginx, and deploy a simple HTML page. Follow the steps below to complete the task.
+You are a DevOps engineer tasked with setting up a web server on a Linux machine and managing user accounts for your team. You need to organize files, install and configure Nginx, deploy a simple HTML page, and create user accounts for your team members (Jethalal and Tappu). Follow the steps below to complete the task.
 
 ---
 
@@ -189,6 +189,72 @@ You are a DevOps engineer tasked with setting up a web server on a Linux machine
 
 ---
 
+### **Part 4: Working with Different Users**
+
+#### **Step 11: Create a User for Jethalal**
+1. Create a new user named `Jethalal` with a home directory:
+   ```bash
+   sudo useradd -m Jethalal
+   ```
+2. Set a password for `Jethalal`:
+   ```bash
+   sudo passwd Jethalal
+   ```
+   - Enter and confirm the password when prompted.
+
+#### **Step 12: Switch to the Jethalal User**
+1. Switch to the `Jethalal` user:
+   ```bash
+   su Jethalal
+   ```
+2. Check the current user:
+   ```bash
+   whoami
+   ```
+3. Navigate to the home directory of `Jethalal`:
+   ```bash
+   cd ~
+   ```
+4. Verify the current directory:
+   ```bash
+   pwd
+   ```
+
+#### **Step 13: Create a User for Tappu**
+1. Switch back to the root or your main user:
+   ```bash
+   exit
+   ```
+2. Create a new user named `Tappu` with a home directory and set the default shell to `/bin/bash`:
+   ```bash
+   sudo useradd -m Tappu -s /bin/bash
+   ```
+3. Set a password for `Tappu`:
+   ```bash
+   sudo passwd Tappu
+   ```
+   - Enter and confirm the password when prompted.
+
+#### **Step 14: Switch to the Tappu User**
+1. Switch to the `Tappu` user:
+   ```bash
+   su Tappu
+   ```
+2. Check the current user:
+   ```bash
+   whoami
+   ```
+3. Navigate to the home directory of `Tappu`:
+   ```bash
+   cd ~
+   ```
+4. Verify the current directory:
+   ```bash
+   pwd
+   ```
+
+---
+
 ### **Summary of Commands Used:**
 
 #### **File Operations:**
@@ -214,9 +280,15 @@ You are a DevOps engineer tasked with setting up a web server on a Linux machine
 2. `sudo vim index.html` - Create and edit an HTML file.
 3. Access the website using `http://<your-public-ip>:80`.
 
+#### **User Management:**
+1. `sudo useradd -m` - Create a new user with a home directory.
+2. `sudo passwd` - Set a password for a user.
+3. `su` - Switch to another user.
+4. `whoami` - Check the current user.
+5. `cd ~` - Navigate to the home directory of the current user.
+
 ---
 
 ### **Next Steps:**
 - Practice this sequence multiple times until you’re comfortable with all the commands.
 - Experiment with additional commands or modify the story to include more advanced tasks.
-- Let me know if you’d like me to create another story or expand this one further! 😊
