Update 1. Linux : Revision.md
Story updated !!!

--- a/1. Linux : Revision.md
+++ b/1. Linux : Revision.md
@@ -24,48 +24,76 @@ Rivision of Linux Basics : Day 1/2 : TrainWithShubham
 
 ---
 
-### **Updated Linux Command Practice Story: Setting Up a Web Server and Managing Users**
-
-#### **Scenario:**
-You are a DevOps engineer tasked with setting up a web server on a Linux machine and managing user accounts for your team. You need to organize files, install and configure Nginx, deploy a simple HTML page, and create user accounts for your team members (Jethalal and Tappu). Follow the steps below to complete the task.
+### **Title: The DevOps Chronicles - Chapter 1: The Server Awakens**
 
 ---
 
-### **Part 1: File Operations**
+#### **Prologue:**
+You are a **DevOps Engineer** working for a startup called **CloudNova**. Your mission is to set up a web server for the company’s new project. Along the way, you’ll need to organize files, manage users, and deploy a website. But beware! The server is a mysterious place, and you’ll need to use your Linux skills to succeed.
 
-#### **Step 1: Log in and Check Your Current Location**
-1. Log in to your Linux shell.
-2. Check the current directory you are in:
+---
+
+### **Chapter 1: The Mysterious Server**
+
+---
+
+#### **Scene 1: Logging into the Server**
+You receive an email from your boss:
+> **Subject:** Urgent: Set Up the Web Server  
+> **Message:**  
+> "We need you to log into the Linux server and set up a web server ASAP. The future of CloudNova depends on this! Use your Linux skills to get the job done. Good luck!"
+
+You take a deep breath and log into the server. The terminal greets you with a blinking cursor.
+
+---
+
+#### **Your Task:**
+1. Check your current location in the server:
    ```bash
    pwd
    ```
+   - *You realize you’re in the `/home` directory. Time to get to work!*
 
-#### **Step 2: Create a Directory for Your Project**
-1. Create a new directory named `DevOps`:
+---
+
+#### **Scene 2: Organizing the Workspace**
+Your boss sends another message:
+> "Before you start, create a directory called `DevOps` to organize all your files. Also, create a file named `intro.txt` to document your progress."
+
+---
+
+#### **Your Task:**
+1. Create a directory named `DevOps`:
    ```bash
    mkdir DevOps
    ```
-2. Verify that the directory has been created:
+2. Verify the directory was created:
    ```bash
    ls
    ```
-
-#### **Step 3: Create a File in the DevOps Directory**
-1. Move into the `DevOps` directory:
+3. Move into the `DevOps` directory:
    ```bash
    cd DevOps
    ```
-2. Create a new text file named `intro.txt`:
+4. Create a file named `intro.txt`:
    ```bash
    touch intro.txt
    ```
-3. Verify that the file has been created:
+5. Verify the file was created:
    ```bash
    ls
    ```
 
-#### **Step 4: Create a Demo Directory and File**
-1. Create a new directory named `demo`:
+---
+
+#### **Scene 3: The Disappearing Directory**
+Suddenly, you notice a strange directory named `demo` that you didn’t create. Your boss warns you:
+> "Be careful! That directory might contain malicious files. Delete it immediately."
+
+---
+
+#### **Your Task:**
+1. Create a directory named `demo` (for the sake of the story):
    ```bash
    mkdir demo
    ```
@@ -73,44 +101,54 @@ You are a DevOps engineer tasked with setting up a web server on a Linux machine
    ```bash
    cd demo
    ```
-3. Create a new text file named `demo.txt`:
+3. Create a file named `demo.txt`:
    ```bash
    touch demo.txt
    ```
-4. Verify that the file has been created:
+4. Verify the file was created:
    ```bash
    ls
    ```
-
-#### **Step 5: Clean Up the Demo Directory**
-1. Go back to the parent directory (one level up):
+5. Go back to the parent directory:
    ```bash
    cd ..
    ```
-2. Remove the `demo` directory and its contents:
+6. Delete the `demo` directory and its contents:
    ```bash
    rm -r demo
    ```
-3. Verify that the directory has been deleted:
+7. Verify the directory was deleted:
    ```bash
    ls
    ```
 
-#### **Step 6: Create and Edit Files**
-1. Create a new text file named `new.txt`:
+---
+
+#### **Scene 4: The Secret File**
+Your boss sends another message:
+> "We need you to create a file named `commands.txt` and document all the commands you’ve used so far. Also, create a file named `demo-file.txt` and add some notes."
+
+---
+
+#### **Your Task:**
+1. Create a file named `commands.txt`:
    ```bash
-   touch new.txt
+   touch commands.txt
    ```
-2. Open the `commands.txt` file in the `vim` editor and add some content:
+2. Open the file in the `vim` editor and add the commands you’ve used:
    ```bash
    vim commands.txt
    ```
-   - Press `i` to enter insert mode, type some text, then press `Esc` and type `:wq` to save and exit.
-3. Display the contents of the `commands.txt` file:
+   - Press `i`, type the commands, then press `Esc` and type `:wq` to save and exit.
+3. Display the contents of the file:
    ```bash
    cat commands.txt
    ```
-4. Open the `demo-file.txt` file in the `nano` editor and add some content:
+4. Create a file named `demo-file.txt`:
+   ```bash
+   touch demo-file.txt
+   ```
+5. Open the file in the `nano` editor and add some notes:
    ```bash
    nano demo-file.txt
    ```
@@ -118,9 +156,17 @@ You are a DevOps engineer tasked with setting up a web server on a Linux machine
 
 ---
 
-### **Part 2: Package Management**
+### **Chapter 2: The Web Server Saga**
 
-#### **Step 7: Update and Upgrade the System**
+---
+
+#### **Scene 5: Installing Nginx**
+Your boss sends another message:
+> "We need you to install and configure Nginx to host our website. Update the system first, then install Nginx."
+
+---
+
+#### **Your Task:**
 1. Update the package list:
    ```bash
    sudo apt-get update
@@ -129,30 +175,32 @@ You are a DevOps engineer tasked with setting up a web server on a Linux machine
    ```bash
    sudo apt-get upgrade
    ```
-
-#### **Step 8: Install and Manage Nginx**
-1. Install the Nginx web server:
+3. Install Nginx:
    ```bash
    sudo apt-get install nginx
    ```
-2. Check the status of the Nginx service:
+4. Check the status of Nginx:
    ```bash
    systemctl status nginx
    ```
-3. Stop the Nginx service:
+5. Stop the Nginx service (just for practice):
    ```bash
    sudo systemctl stop nginx
    ```
-4. Start the Nginx service again:
+6. Start the Nginx service again:
    ```bash
    sudo systemctl start nginx
    ```
 
 ---
 
-### **Part 3: Hosting a Simple HTML Page**
+#### **Scene 6: Deploying the Website**
+Your boss sends the final task:
+> "Deploy a simple HTML page to the server. Create an `index.html` file in the `/var/www` directory and make it accessible to the world."
 
-#### **Step 9: Create an HTML File**
+---
+
+#### **Your Task:**
 1. Navigate to the `/var/www` directory:
    ```bash
    cd /var/www
@@ -161,36 +209,40 @@ You are a DevOps engineer tasked with setting up a web server on a Linux machine
    ```bash
    sudo vim index.html
    ```
-3. Insert the following HTML code (press `i` to enter insert mode):
+3. Insert the following HTML code:
    ```html
    <!DOCTYPE html>
    <html>
    <head>
-       <title>My DevOps Page</title>
+       <title>CloudNova</title>
    </head>
    <body>
-       <h1>Welcome to My DevOps World!</h1>
-       <p>This is a simple HTML page hosted on Nginx.</p>
+       <h1>Welcome to CloudNova!</h1>
+       <p>Your future in the cloud starts here.</p>
    </body>
    </html>
    ```
    - Press `Esc`, then type `:wq` to save and exit.
-
-#### **Step 10: Access Your Website**
-1. Find the public IP address of your instance (you can get this from your cloud provider’s console or use `curl ifconfig.me`).
-2. Open a web browser and enter the following URL:
+4. Access the website using the server’s public IP address:
    ```
    http://<your-public-ip>:80
    ```
    - Replace `<your-public-ip>` with the actual IP address of your instance.
-3. You should see your HTML page displayed!
 
 ---
 
-### **Part 4: Working with Different Users**
+### **Chapter 3: The User Chronicles**
 
-#### **Step 11: Create a User for Jethalal**
-1. Create a new user named `Jethalal` with a home directory:
+---
+
+#### **Scene 7: Adding Team Members**
+Your boss sends a new message:
+> "We have two new team members: Jethalal and Tappu. Create user accounts for them and set their passwords."
+
+---
+
+#### **Your Task:**
+1. Create a user named `Jethalal`:
    ```bash
    sudo useradd -m Jethalal
    ```
@@ -198,95 +250,62 @@ You are a DevOps engineer tasked with setting up a web server on a Linux machine
    ```bash
    sudo passwd Jethalal
    ```
-   - Enter and confirm the password when prompted.
-
-#### **Step 12: Switch to the Jethalal User**
-1. Switch to the `Jethalal` user:
+3. Switch to the `Jethalal` user:
    ```bash
    su Jethalal
    ```
-2. Check the current user:
+4. Check the current user:
    ```bash
    whoami
    ```
-3. Navigate to the home directory of `Jethalal`:
+5. Navigate to the home directory of `Jethalal`:
    ```bash
    cd ~
    ```
-4. Verify the current directory:
+6. Verify the current directory:
    ```bash
    pwd
    ```
-
-#### **Step 13: Create a User for Tappu**
-1. Switch back to the root or your main user:
+7. Switch back to your main user:
    ```bash
    exit
    ```
-2. Create a new user named `Tappu` with a home directory and set the default shell to `/bin/bash`:
+8. Create a user named `Tappu`:
    ```bash
    sudo useradd -m Tappu -s /bin/bash
    ```
-3. Set a password for `Tappu`:
+9. Set a password for `Tappu`:
    ```bash
    sudo passwd Tappu
    ```
-   - Enter and confirm the password when prompted.
-
-#### **Step 14: Switch to the Tappu User**
-1. Switch to the `Tappu` user:
-   ```bash
-   su Tappu
-   ```
-2. Check the current user:
-   ```bash
-   whoami
-   ```
-3. Navigate to the home directory of `Tappu`:
-   ```bash
-   cd ~
-   ```
-4. Verify the current directory:
-   ```bash
-   pwd
-   ```
+10. Switch to the `Tappu` user:
+    ```bash
+    su Tappu
+    ```
+11. Check the current user:
+    ```bash
+    whoami
+    ```
+12. Navigate to the home directory of `Tappu`:
+    ```bash
+    cd ~
+    ```
+13. Verify the current directory:
+    ```bash
+    pwd
+    ```
 
 ---
 
-### **Summary of Commands Used:**
-
-#### **File Operations:**
-1. `pwd` - Print the current working directory.
-2. `mkdir` - Create a new directory.
-3. `touch` - Create an empty file.
-4. `cd` - Change directory.
-5. `rm -r` - Remove a directory and its contents.
-6. `vim` - Edit a file using the Vim editor.
-7. `cat` - Display the contents of a file.
-8. `nano` - Edit a file using the Nano editor.
-
-#### **Package Management:**
-1. `sudo apt-get update` - Update the package list.
-2. `sudo apt-get upgrade` - Upgrade installed packages.
-3. `sudo apt-get install` - Install a package.
-4. `systemctl status` - Check the status of a service.
-5. `sudo systemctl stop` - Stop a service.
-6. `sudo systemctl start` - Start a service.
-
-#### **Web Server Setup:**
-1. `cd /var/www` - Navigate to the web server directory.
-2. `sudo vim index.html` - Create and edit an HTML file.
-3. Access the website using `http://<your-public-ip>:80`.
-
-#### **User Management:**
-1. `sudo useradd -m` - Create a new user with a home directory.
-2. `sudo passwd` - Set a password for a user.
-3. `su` - Switch to another user.
-4. `whoami` - Check the current user.
-5. `cd ~` - Navigate to the home directory of the current user.
+### **Epilogue: Mission Accomplished**
+You’ve successfully set up the web server, organized files, and created user accounts for your team. Your boss sends a final message:
+> "Great job! You’ve saved the day. CloudNova is now live, and the team is ready to roll. Keep up the good work!"
 
 ---
 
-### **Next Steps:**
-- Practice this sequence multiple times until you’re comfortable with all the commands.
-- Experiment with additional commands or modify the story to include more advanced tasks.
+### **The End (For Now...)**
+You’ve completed Chapter 1 of **The DevOps Chronicles**. Stay tuned for the next chapter, where you’ll face new challenges and learn even more Linux commands!
+
+---
+
+Let me know if you’d like to continue the adventure or add more chapters! 😊
