Update 1. Linux : Revision.md

--- a/1. Linux : Revision.md
+++ b/1. Linux : Revision.md
@@ -17,199 +17,196 @@ sudo useradd -m tappu -s /bin/bash, sudo passwd tappu, su tappu
 cd /var, cd www, sudo vim index.html (insert the html code, then copy the 
 public ip address from the details of instance, then use "http://ipaddress:80" and
 your website is ready to be view on any device.)
+
+
+
+MD FILE link : https://markdownlivepreview.com/
 ```
 
 
 Rivision of Linux Basics : Day 1/2 : TrainWithShubham
 
 ---
-
-### **Title: The DevOps Chronicles - Chapter 1: The Server Awakens**
+# The DevOps Chronicles  
+## Chapter 1: The Linux Awakening Arc 
 
 ---
 
-#### **Prologue:**
+### **Prologue**  
 You are a **DevOps Engineer** working for a startup called **CloudNova**. Your mission is to set up a web server for the company’s new project. Along the way, you’ll need to organize files, manage users, and deploy a website. But beware! The server is a mysterious place, and you’ll need to use your Linux skills to succeed.
 
 ---
 
-### **Chapter 1: The Mysterious Server**
+### **Chapter 1: The Mysterious Server**  
 
----
-
-#### **Scene 1: Logging into the Server**
-You receive an email from your boss:
+#### **Scene 1: Logging into the Server**  
+You receive an email from your boss:  
 > **Subject:** Urgent: Set Up the Web Server  
 > **Message:**  
-> "We need you to log into the Linux server and set up a web server ASAP. The future of CloudNova depends on this! Use your Linux skills to get the job done. Good luck!"
+> "We need you to log into the Linux server and set up a web server ASAP. The future of CloudNova depends on this! Use your Linux skills to get the job done. Good luck!"  
 
-You take a deep breath and log into the server. The terminal greets you with a blinking cursor.
+You take a deep breath and log into the server. The terminal greets you with a blinking cursor.  
 
 ---
 
-#### **Your Task:**
-1. Check your current location in the server:
+#### **Your Task:**  
+1. Check your current location in the server:  
    ```bash
    pwd
-   ```
-   - *You realize you’re in the `/home` directory. Time to get to work!*
+---
+
+#### **Scene 2: Organizing the Workspace**  
+Your boss sends another message:  
+> "Before you start, create a directory called `DevOps` to organize all your files. Also, create a file named `intro.txt` to document your progress."  
 
 ---
 
-#### **Scene 2: Organizing the Workspace**
-Your boss sends another message:
-> "Before you start, create a directory called `DevOps` to organize all your files. Also, create a file named `intro.txt` to document your progress."
-
----
-
-#### **Your Task:**
-1. Create a directory named `DevOps`:
+#### **Your Task:**  
+1. Create a directory named `DevOps`:  
    ```bash
    mkdir DevOps
-   ```
-2. Verify the directory was created:
+   ```  
+2. Verify the directory was created:  
    ```bash
    ls
-   ```
-3. Move into the `DevOps` directory:
+   ```  
+3. Move into the `DevOps` directory:  
    ```bash
    cd DevOps
-   ```
-4. Create a file named `intro.txt`:
+   ```  
+4. Create a file named `intro.txt`:  
    ```bash
    touch intro.txt
-   ```
-5. Verify the file was created:
+   ```  
+5. Verify the file was created:  
    ```bash
    ls
-   ```
+   ```  
 
 ---
 
-#### **Scene 3: The Disappearing Directory**
-Suddenly, you notice a strange directory named `demo` that you didn’t create. Your boss warns you:
-> "Be careful! That directory might contain malicious files. Delete it immediately."
+#### **Scene 3: The Disappearing Directory**  
+Suddenly, you notice a strange directory named `demo` that you didn’t create. Your boss warns you:  
+> "Be careful! That directory might contain malicious files. Delete it immediately."  
 
 ---
 
-#### **Your Task:**
-1. Create a directory named `demo` (for the sake of the story):
+#### **Your Task:**  
+1. Create a directory named `demo` (for the sake of the story):  
    ```bash
    mkdir demo
-   ```
-2. Move into the `demo` directory:
+   ```  
+2. Move into the `demo` directory:  
    ```bash
    cd demo
-   ```
-3. Create a file named `demo.txt`:
+   ```  
+3. Create a file named `demo.txt`:  
    ```bash
    touch demo.txt
-   ```
-4. Verify the file was created:
+   ```  
+4. Verify the file was created:  
    ```bash
    ls
-   ```
-5. Go back to the parent directory:
+   ```  
+5. Go back to the parent directory:  
    ```bash
    cd ..
-   ```
-6. Delete the `demo` directory and its contents:
+   ```  
+6. Delete the `demo` directory and its contents:  
    ```bash
    rm -r demo
-   ```
-7. Verify the directory was deleted:
+   ```  
+7. Verify the directory was deleted:  
    ```bash
    ls
-   ```
+   ```  
 
 ---
 
-#### **Scene 4: The Secret File**
-Your boss sends another message:
-> "We need you to create a file named `commands.txt` and document all the commands you’ve used so far. Also, create a file named `demo-file.txt` and add some notes."
+#### **Scene 4: The Secret File**  
+Your boss sends another message:  
+> "We need you to create a file named `commands.txt` and document all the commands you’ve used so far. Also, create a file named `demo-file.txt` and add some notes."  
 
 ---
 
-#### **Your Task:**
-1. Create a file named `commands.txt`:
+#### **Your Task:**  
+1. Create a file named `commands.txt`:  
    ```bash
    touch commands.txt
-   ```
-2. Open the file in the `vim` editor and add the commands you’ve used:
+   ```  
+2. Open the file in the `vim` editor and add the commands you’ve used:  
    ```bash
    vim commands.txt
-   ```
-   - Press `i`, type the commands, then press `Esc` and type `:wq` to save and exit.
-3. Display the contents of the file:
+   ```  
+   - Press `i`, type the commands, then press `Esc` and type `:wq` to save and exit.  
+3. Display the contents of the file:  
    ```bash
    cat commands.txt
-   ```
-4. Create a file named `demo-file.txt`:
+   ```  
+4. Create a file named `demo-file.txt`:  
    ```bash
    touch demo-file.txt
-   ```
-5. Open the file in the `nano` editor and add some notes:
+   ```  
+5. Open the file in the `nano` editor and add some notes:  
    ```bash
    nano demo-file.txt
-   ```
-   - Add some text, then press `Ctrl + X`, followed by `Y` and `Enter` to save and exit.
+   ```  
+   - Add some text, then press `Ctrl + X`, followed by `Y` and `Enter` to save and exit.  
 
 ---
 
-### **Chapter 2: The Web Server Saga**
+### **Chapter 2: The Web Server Saga**  
+
+#### **Scene 5: Installing Nginx**  
+Your boss sends another message:  
+> "We need you to install and configure Nginx to host our website. Update the system first, then install Nginx."  
 
 ---
 
-#### **Scene 5: Installing Nginx**
-Your boss sends another message:
-> "We need you to install and configure Nginx to host our website. Update the system first, then install Nginx."
-
----
-
-#### **Your Task:**
-1. Update the package list:
+#### **Your Task:**  
+1. Update the package list:  
    ```bash
    sudo apt-get update
-   ```
-2. Upgrade the installed packages:
+   ```  
+2. Upgrade the installed packages:  
    ```bash
    sudo apt-get upgrade
-   ```
-3. Install Nginx:
+   ```  
+3. Install Nginx:  
    ```bash
    sudo apt-get install nginx
-   ```
-4. Check the status of Nginx:
+   ```  
+4. Check the status of Nginx:  
    ```bash
    systemctl status nginx
-   ```
-5. Stop the Nginx service (just for practice):
+   ```  
+5. Stop the Nginx service (just for practice):  
    ```bash
    sudo systemctl stop nginx
-   ```
-6. Start the Nginx service again:
+   ```  
+6. Start the Nginx service again:  
    ```bash
    sudo systemctl start nginx
-   ```
+   ```  
 
 ---
 
-#### **Scene 6: Deploying the Website**
-Your boss sends the final task:
-> "Deploy a simple HTML page to the server. Create an `index.html` file in the `/var/www` directory and make it accessible to the world."
+#### **Scene 6: Deploying the Website**  
+Your boss sends the final task:  
+> "Deploy a simple HTML page to the server. Create an `index.html` file in the `/var/www` directory and make it accessible to the world."  
 
 ---
 
-#### **Your Task:**
-1. Navigate to the `/var/www` directory:
+#### **Your Task:**  
+1. Navigate to the `/var/www` directory:  
    ```bash
    cd /var/www
-   ```
-2. Open the `index.html` file in the `vim` editor:
+   ```  
+2. Open the `index.html` file in the `vim` editor:  
    ```bash
    sudo vim index.html
-   ```
-3. Insert the following HTML code:
+   ```  
+3. Insert the following HTML code:  
    ```html
    <!DOCTYPE html>
    <html>
@@ -221,91 +218,92 @@ Your boss sends the final task:
        <p>Your future in the cloud starts here.</p>
    </body>
    </html>
-   ```
-   - Press `Esc`, then type `:wq` to save and exit.
-4. Access the website using the server’s public IP address:
+   ```  
+   - Press `Esc`, then type `:wq` to save and exit.  
+4. Access the website using the server’s public IP address:  
    ```
    http://<your-public-ip>:80
-   ```
-   - Replace `<your-public-ip>` with the actual IP address of your instance.
+   ```  
+   - Replace `<your-public-ip>` with the actual IP address of your instance.  
 
 ---
 
-### **Chapter 3: The User Chronicles**
+### **Chapter 3: The User Chronicles**  
+
+#### **Scene 7: Adding Team Members**  
+Your boss sends a new message:  
+> "We have two new team members: Jethalal and Tappu. Create user accounts for them and set their passwords."  
 
 ---
 
-#### **Scene 7: Adding Team Members**
-Your boss sends a new message:
-> "We have two new team members: Jethalal and Tappu. Create user accounts for them and set their passwords."
-
----
-
-#### **Your Task:**
-1. Create a user named `Jethalal`:
+#### **Your Task:**  
+1. Create a user named `Jethalal`:  
    ```bash
    sudo useradd -m Jethalal
-   ```
-2. Set a password for `Jethalal`:
+   ```  
+2. Set a password for `Jethalal`:  
    ```bash
    sudo passwd Jethalal
-   ```
-3. Switch to the `Jethalal` user:
+   ```  
+3. Switch to the `Jethalal` user:  
    ```bash
    su Jethalal
-   ```
-4. Check the current user:
+   ```  
+4. Check the current user:  
    ```bash
    whoami
-   ```
-5. Navigate to the home directory of `Jethalal`:
+   ```  
+5. Navigate to the home directory of `Jethalal`:  
    ```bash
    cd ~
-   ```
-6. Verify the current directory:
+   ```  
+6. Verify the current directory:  
    ```bash
    pwd
-   ```
-7. Switch back to your main user:
+   ```  
+7. Switch back to your main user:  
    ```bash
    exit
-   ```
-8. Create a user named `Tappu`:
+   ```  
+8. Create a user named `Tappu`:  
    ```bash
    sudo useradd -m Tappu -s /bin/bash
-   ```
-9. Set a password for `Tappu`:
+   ```  
+9. Set a password for `Tappu`:  
    ```bash
    sudo passwd Tappu
-   ```
-10. Switch to the `Tappu` user:
+   ```  
+10. Switch to the `Tappu` user:  
     ```bash
     su Tappu
-    ```
-11. Check the current user:
+    ```  
+11. Check the current user:  
     ```bash
     whoami
-    ```
-12. Navigate to the home directory of `Tappu`:
+    ```  
+12. Navigate to the home directory of `Tappu`:  
     ```bash
     cd ~
-    ```
-13. Verify the current directory:
+    ```  
+13. Verify the current directory:  
     ```bash
     pwd
-    ```
+    ```  
 
 ---
 
-### **Epilogue: Mission Accomplished**
-You’ve successfully set up the web server, organized files, and created user accounts for your team. Your boss sends a final message:
-> "Great job! You’ve saved the day. CloudNova is now live, and the team is ready to roll. Keep up the good work!"
+### **Epilogue: Mission Accomplished**  
+You’ve successfully set up the web server, organized files, and created user accounts for your team. 
+Your boss sends a final message:  
+> "Great job! You’ve saved the day. CloudNova is now live, and the team is ready to roll. Keep up the good work!"  
 
 ---
 
-### **The End (For Now...)**
-You’ve completed Chapter 1 of **The DevOps Chronicles**. Stay tuned for the next chapter, where you’ll face new challenges and learn even more Linux commands!
+**Author**: Bhimsen  
+**Date**: 02-02-2025 
 
 ---
+```
+       !!! PRACTICE MORE .... YOU ARE STILL AN AVERAGE GUY !!!
+```
 
-Let me know if you’d like to continue the adventure or add more chapters! 😊
