Update 1. GitHub Revision.md

--- a/1. GitHub Revision.md
+++ b/1. GitHub Revision.md
@@ -257,4 +257,235 @@ Then push the changes into remote repo.
 Branch : Default branching (Production)
 	- Master : if created a repo in local	
 	- main   : if created a repo in remote
+	
+	
+==================================================================================================================================
+
+## GitHub Advanced : 
+- - - - - - - - - 
+
+*AUTH token : Re-Generation of the token.
+---
+Delete the old token on github. Now try to push the local repo into remote repo. It will throw an error.
+Now you need to generate another token. 
+ubuntu@ip-172-31-46-232:~/Scripts$ git remote set-url origin https://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@github.com/BhimsenK/demo-shell-scripts.git
+ubuntu@ip-172-31-46-232:~/Scripts$ git push --dry-run origin master
+Once you have added the new token and set the url, then try to dry run a push operation. It will tell you whether the connection is successful or not.
+Now push the local repo into remote repo once the connection is successful. 
+ubuntu@ip-172-31-46-232:~/Scripts$ git push origin master
+
+
+*Branch : Adding dev branch into remote repo. 
+---
+check the available branches. you can see 'dev' & 'master'. But only 'master' branch is there on remote repo. So need to add 'dev' branch as well.
+ubuntu@ip-172-31-46-232:~/Scripts$ git branch
+  dev
+* master
+ubuntu@ip-172-31-46-232:~/Scripts$ git switch dev
+ubuntu@ip-172-31-46-232:~/Scripts$ git branch
+ubuntu@ip-172-31-46-232:~/Scripts$ git status
+ubuntu@ip-172-31-46-232:~/Scripts$ git push origin dev
+Now refresh the GitHub on browser and you can see the 'dev' branch also been added to it.
+
+
+*Pull request : 
+---
+Go to the Dev Branch. Add some extra lines in 'hello.sh' file.  Then push the changes to remote repo.
+Now you can see the changes only in Dev branch. 
+And now you need to replicate these changes into your 'master' branch as well. 
+So you need to go to GitHub, then click on pull request. 
+Now in the first section, you need to select on which branch you need to merge the changes i.e 'Master'.
+and in 2nd sec. you need to select from which branch i.e 'dev'
+Now the PR is open so if you click on 'merge pull request' then the changes will be applied otherwise you can select cancel request. 
+note : from cmd/ git bash you can go into the branch on which you want to merge i.e 'master' another branch i.e 'dev'.
+	command : git merge dev     (this is on master branch.)
+
+
+*Revert
+---
+
+Scenario 1: Reverting a in between commit of same file.
+
+open a 'from_dev.txt' file and write one line. commit it as 'added fine commit'
+ubuntu@ip-172-31-46-232:~/Scripts$ vim from_dev.txt
+ubuntu@ip-172-31-46-232:~/Scripts$ git add from_dev.txt
+ubuntu@ip-172-31-46-232:~/Scripts$ git commit -m "adding a fine commit"
+
+again open a 'from_dev.txt' file and write one line. commit it as 'added a wrong commit'
+ubuntu@ip-172-31-46-232:~/Scripts$ vim from_dev.txt
+ubuntu@ip-172-31-46-232:~/Scripts$ vim from_dev.txt
+ubuntu@ip-172-31-46-232:~/Scripts$ git add from_dev.txt
+ubuntu@ip-172-31-46-232:~/Scripts$ git commit -m "added a wrong commit"
+
+open a 'from_dev.txt' file and write one line. commit it as 'added fine commit'
+"ubuntu@ip-172-31-46-232:~/Scripts$ vim from_dev.txt
+ ubuntu@ip-172-31-46-232:~/Scripts$ git add from_dev.txt
+ ubuntu@ip-172-31-46-232:~/Scripts$ git commit -m "adding a fine commit" "
+
+Now, 
+"ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+ f541889 (HEAD -> dev) Added a fine commit
+ cf4d956 added a wrong commit
+ 3b3a6f6 adding a fine commit"
+
+we need to revert the changes happened from "cf4d956 added a wrong commit" this commit.
+"ubuntu@ip-172-31-46-232:~/Scripts$ git revert cf4d956
+ Auto-merging from_dev.txt
+ CONFLICT (content): Merge conflict in from_dev.txt
+ error: could not revert cf4d956... added a wrong commit"
+Now this will throw an confict error. so,
+"ubuntu@ip-172-31-46-232:~/Scripts$ git status
+ On branch dev
+ You are currently reverting commit cf4d956.
+   (fix conflicts and run "git revert --continue")
+   (use "git revert --skip" to skip this patch)
+   (use "git revert --abort" to cancel the revert operation)... "
+We need to open the 'from_dev.txt' file again. 
+ubuntu@ip-172-31-46-232:~/Scripts$ vim from_dev.txt
+in here, you will see the error msg in the file so you need to manually remove 
+the part which has been added in wrong commit. then simply save it. 
+
+ubuntu@ip-172-31-46-232:~/Scripts$ git add from_dev.txt
+ubuntu@ip-172-31-46-232:~/Scripts$ git status
+ubuntu@ip-172-31-46-232:~/Scripts$ git revert --continue
+ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+919d2d3 (HEAD -> dev) Revert "added a wrong commit"
+
+DONE !!!
+
+
+Scenario 2: Reverting a last commit 
+ ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+ cf4d956 added a wrong commit
+ ubuntu@ip-172-31-46-232:~/Scripts$ git revert cf4d956
+ 
+DONE !!!
+ 
+ 
+ 
+*Stashing & Poping: 
+---
+Scenario : WORK IN PROGRESS
+           You are developing a script. You have added the initial script (whatever has been developed yet.)
+           You are developing the code, but you are not sure whether its the 
+           correct or not. You might change it later ydk.
+		   
+
+You have added some new lines in 'hello.sh' file. You have added it to git.
+But you don't want to commit it now, as you need to do some other work you remembered that's in master branch.
+So you are trying to change the branch. 
+ubuntu@ip-172-31-46-232:~/Scripts$ git switch master
+error: Your local changes to the following files would be overwritten by checkout:
+        hello.sh
+Please commit your changes or stash them before you switch branches.
+Aborting
+ubuntu@ip-172-31-46-232:~/Scripts$
+Its  not allowing you to change the branch without commit/ or it will overwritten.
+
+You need to stash it. So that for this branch, this status will get saved in stack.
+ubuntu@ip-172-31-46-232:~/Scripts$ git stash
+Saved working directory and index state WIP on dev: 919d2d3 Revert "added a wrong commit"
+ubuntu@ip-172-31-46-232:~/Scripts$ git status
+On branch dev
+nothing to commit, working tree clean
+
+You went to 'master' branch, came back to 'dev' after completing some work there.
+ubuntu@ip-172-31-46-232:~/Scripts$ git checkout master
+Switched to branch 'master'
+ubuntu@ip-172-31-46-232:~/Scripts$ git checkout dev
+Switched to branch 'dev'
+
+now you just need to pop the last state from the stack for this branch.
+ubuntu@ip-172-31-46-232:~/Scripts$ git stash pop
+ubuntu@ip-172-31-46-232:~/Scripts$ cat hello.sh
+.
+.
+<<thalapathy
+jai sherawali...tera shera aa gaya.....
+bass maa ke wajahase chup hoon !!!
+thalapathy
+ubuntu@ip-172-31-46-232:~/Scripts$
+
+here you can see the changes we have made are still there without commit. 
+
+
+
+*cherrypicking : (if we merge 2 branchs then all the commits will merge. But if want to merge only a specific commit then cherry-pick comes in picture.)
+---
+
+You are on 'Dev' branch. You have created a file i.e 'demo_master.txt'.
+You have added it to git and committed it, as 'Adding demo_master.txt'. 
+
+ubuntu@ip-172-31-46-232:~/Scripts$ git switch dev
+Switched to branch 'dev'
+ubuntu@ip-172-31-46-232:~/Scripts$ vim demo_master.txt
+ubuntu@ip-172-31-46-232:~/Scripts$ git add demo_master.txt
+ubuntu@ip-172-31-46-232:~/Scripts$ git commit -m "Adding demo_master.txt"
+ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+9ad3c41 (HEAD -> dev) Adding demo_master.txt
+919d2d3 Revert "added a wrong commit"
+f541889 Added a fine commit
+
+
+Now outof all the commit logs, you only want to add that commit in which you 
+have added the 'demo_master.txt' file i.e 9ad3c41
+
+So you went to 'master' branch now. 
+ubuntu@ip-172-31-46-232:~/Scripts$ git checkout master
+Switched to branch 'master'
+ubuntu@ip-172-31-46-232:~/Scripts$ git cherry-pick 9ad3c41
+ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+40e0265 (HEAD -> master) Adding demo_master.txt
+54ed09a (origin/master) adding a new sample txt file
+
+Now you can see that 'dev' branch commit into your 'master' branch commit logs.
+Now that file is also present in 'master' branch. 
+
+
+
+*Rebase :
+
+it will create a linear logs of commits of the branch.
+
+in Dev, there are separate log commits history.
+ubuntu@ip-172-31-46-232:~/Scripts$ git checkout dev
+Switched to branch 'dev'
+ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+9ad3c41 (HEAD -> dev) Adding demo_master.txt
+919d2d3 Revert "added a wrong commit"
+f541889 Added a fine commit
+cf4d956 added a wrong commit
+...
+
+In 'master' as well having its own log commit history. 
+ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+40e0265 (HEAD -> master) Adding demo_master.txt
+54ed09a (origin/master) adding a new sample txt file
+d50f055 added from local
+5a71c3f Create from_remote.txt
+97885ab added dev file
+d7a3ddb Added README
+
+But if we want to see the time wise log commits on both master & dev then,
+go to 'master' branch. 
+ubuntu@ip-172-31-46-232:~/Scripts$ git switch master
+Switched to branch 'master'
+ubuntu@ip-172-31-46-232:~/Scripts$ git rebase dev
+ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+d87008f (HEAD -> master) adding a new sample txt file
+6c6b8dd added from local
+51016b1 Create from_remote.txt
+9ad3c41 (dev) Adding demo_master.txt
+919d2d3 Revert "added a wrong commit"
+f541889 Added a fine commit
+cf4d956 added a wrong commit
+3b3a6f6 adding a fine commit
+d95a16b (origin/dev) adding multi line comment from Dev Branch in hello.sh file
+97885ab added dev file
+d7a3ddb Added README
+4230f96 Adding all the scripts
+5333307 added Sholay Script
+
+and here you go... you will get timewise log history regardless of dev & master branch.
+
 ```
